Fix align center issue with tags. Removed materialize chips class.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -92,6 +92,7 @@ h1 {
   color: white;
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .card-reveal-grid__row7 {
   text-align: center;
@@ -109,6 +110,7 @@ h1 {
   line-height: 2rem;
   background-color: #ee6e73;
   color: white;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .card-reveal-grid__row9 {
   padding-top: 2rem;
@@ -142,6 +144,55 @@ h1 {
 .idea-details__cta--btn {
   justify-self: center;
 }
+.idea-details__votes {
+  grid-column: 2/6;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 0.6rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+}
+.idea-details__votes__fr1 {
+  justify-self: end;
+  align-self: center;
+}
+.idea-details__votes__fr3 {
+  justify-self: end;
+  align-self: center;
+}
+.idea-details__votes__fr4 {
+  justify-self: start;
+}
+.idea-details__votes__row2--left {
+  grid-column: 1/3;
+  justify-self: center;
+  font-size: 1rem;
+}
+.idea-details__votes__row2--right {
+  grid-column: 3/5;
+  justify-self: center;
+  font-size: 1rem;
+}
+.idea-details__category {
+  display: grid;
+  row-gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+.idea-details__category--title {
+  text-align: center;
+  grid-row: 1;
+  grid-column: 2;
+}
+.idea-details__category--item {
+  grid-row: 2;
+  grid-column: 2;
+  background-color: blue;
+  color: white;
+  text-align: center;
+  padding: 0.5rem;
+  line-height: 2rem;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
 .idea-details__tags {
   display: grid;
   row-gap: 1rem;
@@ -158,16 +209,13 @@ h1 {
 .idea-details__tags--row2--item {
   justify-self: center;
   background-color: #ee6e73;
-}
-.idea-details__category {
-  display: grid;
-  row-gap: 1rem;
-}
-.idea-details__category--title {
+  display: inline-block;
+  line-height: 2rem;
+  color: white;
+  padding: 0.5rem;
+  width: 90%;
   text-align: center;
-}
-.idea-details__category--item {
-  background-color: blue;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .idea-details__secundary {
   display: grid;
