--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -79,6 +79,7 @@
             color: white;
             font-size: 1rem;
             padding: 0.5rem 1rem;
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
         }
     }
 
@@ -100,6 +101,7 @@
             line-height: 2rem;
             background-color: #ee6e73;
             color: white;
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
         }
     }
 
