--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -33,6 +33,66 @@
         }
     }
 
+    &__votes {
+
+        grid-column: 2/6;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 0.6rem;
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+
+        &__fr1 {
+            justify-self: end;
+            align-self: center;
+        }
+    
+        &__fr3 {
+            justify-self: end;
+            align-self: center; 
+        }
+    
+        &__fr4 {
+            justify-self: start;
+        }
+    
+        &__row2--left {
+            grid-column: 1 / 3;
+            justify-self: center;
+            font-size: 1rem;
+        }
+    
+        &__row2--right {
+            grid-column: 3/5;
+            justify-self: center;
+            font-size: 1rem;
+        }
+
+    }
+
+    &__category {
+        display: grid;
+        row-gap: 1rem;
+        grid-template-columns: repeat(3, 1fr);
+
+        &--title {
+            text-align: center;
+            grid-row: 1;
+            grid-column: 2;
+        }
+
+        &--item {
+            grid-row: 2;
+            grid-column: 2;
+            background-color: blue;
+            color: white;
+            text-align: center;
+            padding: 0.5rem;
+            line-height: 2rem;
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+        }
+    }
+
     &__tags {
         display: grid;
         row-gap: 1rem;
@@ -50,24 +110,19 @@
             &--item {
                 justify-self: center;
                 background-color: $tagcolor;
-
+                display: inline-block;
+                // height: 2rem;
+                line-height: 2rem;
+                color: white;
+                padding: 0.5rem;
+                width: 90%;
+                text-align: center;
+                box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
             }
         }
     
     }
-
-    &__category {
-        display: grid;
-        row-gap: 1rem;
-
-        &--title {
-            text-align: center;
-        }
-
-        &--item {
-            background-color: blue;
-        }
-    }
+    
 
     &__secundary {
         display: grid;
